added positioning styling for navbar

--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -8,7 +8,7 @@
 
 html,
 body {
-    background-color: turquoise;
     box-sizing: border-box;
-    color: lightgoldenrodyellow;
+    font-size: 62.5%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
