added baseline framework to Composition Page

--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -1,6 +1,8 @@
 @import "base";
 @import "variables";
+@import "utilities";
 
+@import "compositions";
 @import "footer";
 @import "home";
-@import "navbar";
+@import "navbar-menu";
