--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,6 +1,8 @@
 $color-primary: rgb(70, 211, 192);
-$color-primary-light: rgb(85, 236, 216);
-$color-primary-dark: rgb(52, 189, 171);
+$color-primary-light: rgb(146, 255, 240);
+$color-primary-dark: rgb(28, 153, 136);
+
+$color-secondary: rgb(19, 212, 154);
 
 $color-grey-light-1: rgb(219, 219, 219);
 $color-grey-light-2: rgb(207, 207, 207);
@@ -9,3 +11,6 @@ $color-grey-light-3: rgb(202, 202, 202);
 $color-grey-dark-1: rgb(160, 160, 160);
 $color-grey-dark-2: rgb(138, 138, 138);
 $color-grey-dark-3: rgb(105, 105, 105);
+
+$color-white: #FFF;
+$color-black: #000;
