added upload page and create-composition form component

--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -3,6 +3,8 @@
 @import "utilities";
 
 @import "compositions";
+@import "create-composition";
 @import "footer";
 @import "home";
 @import "navbar-menu";
+@import "upload";
