--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -14,3 +14,7 @@ $color-grey-dark-3: rgb(105, 105, 105);
 
 $color-white: #FFF;
 $color-black: #000;
+
+
+$button-shadow-normal: .2rem .2rem 2.5rem rgba($color-black, .3);
+$button-shadow-clicked: .1rem .1rem 1rem rgba($color-black, .3);
