--- a/src/style/_utilities.scss
+++ b/src/style/_utilities.scss
@@ -3,3 +3,17 @@
     margin-top: 6rem;
     color: $color-grey-dark-3;
 }
+
+.header-primary {
+    color: $color-grey-dark-3;
+    font-size: 2.4rem;
+}
+
+.button {
+        border-radius: 5rem;
+        color: white;
+        font-weight: 400;
+        font-size: 2rem;
+        border-style: none;
+        border: none;
+}
