--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -1,6 +1,7 @@
 @import "base";
 @import "variables";
 @import "utilities";
+@import "animations";
 
 @import "compositions";
 @import "create-composition";
