implemented border radius in home page images

--- a/src/style/_compositions.scss
+++ b/src/style/_compositions.scss
@@ -38,6 +38,7 @@
         display: inline-block;
         box-sizing: border-box;
         border: .3rem solid transparent;
+        border-radius: 2rem;
         transition: .2s all;
     }
 
