--- a/src/style/_single-composition.scss
+++ b/src/style/_single-composition.scss
@@ -14,7 +14,7 @@
     }
 
     &__image {
-        width: 50rem;
+        width: 120rem;
         margin: 2rem 0;
         border-radius: 5rem;
     }
@@ -28,5 +28,26 @@
         font-size: 1.6rem;
         font-weight: 100;
         margin-bottom: 1.6rem;
+        display: none;
+    }
+
+    &__link {
+        text-decoration: none;
+    }
+
+    &__button {
+        margin-top: 3rem;
+        border-style: none;
+        color: $color-grey-dark-3;
+        font-weight: 300;
+        background-color: transparent;
+        font-size: 2rem;
+        transition: .3s all;
+
+        cursor: pointer;
+
+        &:hover {
+            color: $color-primary;
+        }
     }
 }
