added typescript into React components

--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -3,6 +3,7 @@
 @import "utilities";
 @import "animations";
 
+@import "coming-soon";
 @import "compositions";
 @import "create-composition";
 @import "footer";
