--- a/src/style/_update-composition.scss
+++ b/src/style/_update-composition.scss
@@ -43,7 +43,7 @@
         margin: 2rem;
         transition: .3s all;
 
-        cursor: pointer;
+        cursor: text;
 
         &:focus {
             outline: none;
