reworked delete composition functionality to only be present in edit mode

--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -6,6 +6,7 @@
 @import "coming-soon";
 @import "compositions";
 @import "create-composition";
+@import "delete-warning";
 @import "footer";
 @import "home";
 @import "navbar-menu";
