--- a/src/style/_compositions.scss
+++ b/src/style/_compositions.scss
@@ -49,6 +49,7 @@
     }
 
     &__button-delete {
+        z-index: 10;
         border-style: none;
         color: $color-grey-light-3;
         text-shadow: .1rem .1rem rgba($color-black, .5);
