--- a/src/style/_update-composition.scss
+++ b/src/style/_update-composition.scss
@@ -72,7 +72,7 @@
         margin-top: 3rem;
         border-style: none;
         border-radius: 3rem;
-        padding: 1rem;
+        padding: 1.5rem;
         color: rgba(11, 33, 230, 0.678);
         font-weight: 300;
         background-image: linear-gradient(to right, rgba($color-primary-light, .6), rgba($color-primary, .6));
@@ -86,5 +86,9 @@
             color: $color-white;
             background-image: linear-gradient(to right, rgba($color-primary-light, .7), rgba($color-primary-dark, .7));
         }
+    }
+
+    &__button-delete {
+        margin-right: 3rem;
     }
 }
